src/components/Team/Team.module.scss
@import "../../styling/alignments.scss";
@import "../../styling/colors.scss";
@import "../../styling/font-sizes.scss";
@import "../../styling/global.scss";
@import "../../styling/margins.scss";
@import "../../styling/paddings.scss";

.container {
  @include font-sized(l);
  @include marged(horizontal, s3);

  border-radius: $border-radius;
  flex: 1;
  height: $match-container-height;
  position: relative;
  overflow: hidden;

  &Left {
    @extend .container;
    @include flex-aligned(flex-start, center);
  }
  &Right {
    @extend .container;
    @include flex-aligned(flex-end, center);
  }
}

.logoContainer {
  flex: 1;

  .logo {
    filter: drop-shadow(0px 0px 10px #222);
    position: absolute;
    top: 50%;

    &Clickable {
      cursor: pointer;
      transition: transform $transition-time;

      &Left:hover {
        @extend .logoClickable;
        transform: scale(1.1) translateX(-50%) translateY(-50%);
      }
      &Right:hover {
        @extend .logoClickable;
        transform: scale(1.1) translateX(50%) translateY(-50%);
      }
    }

    &Left {
      left: 15%;
      transform: translateX(-50%) translateY(-50%);
    }

    &Right {
      transform: translateX(50%) translateY(-50%);
      right: 15%;
    }

    &Big {
      max-height: 90px;
      max-width: 90px;
    }

    &Small {
      max-height: 60px;
      max-width: 60px;
    }
  }
}

.scoreContainer {
  @include bg-rgba-colored($color-black, 0.2);
  @include flex-aligned(center, center);
  @include font-sized(l3);

  cursor: pointer;
  flex-direction: column;
  height: 100%;
  transition: background-color $transition-time;
  width: 50px;

  &Null {
    @extend .scoreContainer;
    @include bg-rgba-colored($color-black, 0.5);
    transition: background-color $transition-time;
  }

  &Hoverable:hover {
    @include bg-rgba-colored($color-black, 0.3);
    transition: background-color $transition-time;
  }

  &Score {
    @include flex-aligned(center, center);

    flex: 1;

    &Highlight {
      animation: heartbeat 1.5s infinite;
    }
  }

  @keyframes heartbeat {
    0% {
      transform: scale(1);
    }
    25% {
      transform: scale(0.97);
    }
    35% {
      transform: scale(0.9);
    }
    45% {
      transform: scale(1.1);
    }
    55% {
      transform: scale(0.9);
    }
    65% {
      transform: scale(1.1);
    }
    75% {
      transform: scale(1.03);
    }
    100% {
      transform: scale(1);
    }
  }

  &Bet {
    @include font-sized(m);
    @include flex-aligned(center, center);
    @include font-colored($color-white);

    height: 24px;
    width: 100%;

    &Green {
      @include bg-colored($color-mint);
    }

    &Blue {
      @include bg-colored($color-qatar-blue);
    }

    &LightBlue {
      @include bg-colored($color-qatar-lightblue);
    }

    &Yellow {
      @include bg-colored($color-gold);
    }

    &Red {
      @include bg-colored($color-qatar-red);
    }
  }
}

.nameContainer {
  @include font-sized(l2);
  @include padded(horizontal, m);

  z-index: $absolute-visible;

  &Clickable {
    text-decoration: underline dotted transparent;
    cursor: pointer;
    transition: text-decoration $transition-time;

    &:hover {
      text-decoration: underline dotted;
    }
  }
}

.form {
  @include padded(horizontal, s3);
}

.scoreInput {
  @include aligned(center);

  border-bottom: 2px solid $color-white;
  width: 36px;
}

